--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /* Body */
 
 body {
-	font-family: Sans-Serif;
+	font: message-box;
+	/* font-family: Sans-Serif; */
 	/* display: block;
 	margin-left: auto;
 	margin-right: auto; */
@@ -11,10 +12,10 @@ body {
 /* Container */
 
 .container {
-	margin-top: 40px;
+	margin-top: 49px;
 	width: 793px;
 	height: 793px;
-	padding: 23mm 21mm 23mm 21mm;
+	padding: 16mm 21mm 16mm 21mm;
 	background-color: #fff;
 }
 
@@ -30,22 +31,24 @@ body {
 }
 
 .personal-info-name {
-	font-size: 40px;
+	line-height: 35px;
+	font-size: 35.5px;
+    font-family: sans-serif;
+    font-weight: bold;
 	font-weight: bold;
-	padding-bottom: 4px;
 }
 
 .personal-info-title {
 	font-size: 20px;
 	font-weight: bold;
-	padding-bottom: 20px;
+	padding-bottom: 16px;
 }
 
 .personal-info-contact {
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: 50% 50%;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: bold;
 	grid-gap: 6px;
 }
@@ -77,7 +80,7 @@ body {
 	display: grid;
 	grid-gap: 0px 45px;
 	grid-template-columns: 70% 30%;
-	padding-top: 42px;
+	/* padding-top: 42px; */
 }
 
 .cv-body-main {
@@ -110,14 +113,24 @@ hr.cv-item-subitem-separator {
 	border-right: 1px dashed #fff;
 }
 
-.cv-item-work-experience, .cv-item-life-philosophy, .cv-item-skills, .cv-item-education, .cv-item-language, .cv-item-volunteering {
+/*.cv-item-work-experience,*/ .cv-item-life-philosophy, .cv-item-skills, /*.cv-item-education,*/ .cv-item-language, .cv-item-volunteering {
 	padding-bottom: 10px;
+}
+
+.cv-item-work-experience {
+	padding-bottom: 6px;
 }
 
 /* Work Experience */
 
 .cv-item-work-experience-title {
-	font-size: 21px;
+	font-family: sans-serif;
+	font-size: 19px;
+}
+
+.cv-item-work-experience-position {
+	font-weight: bold;
+	font-size: 14px;
 }
 
 .cv-item-work-experience-body {
@@ -129,10 +142,28 @@ hr.cv-item-subitem-separator {
 .cv-item-life-philosophy-quote {
 	font-style: italic;
 	text-align: justify;
+	font-size: 15px;
 }
 
 .cv-item-life-philosophy-source {
 	text-align: right;
+}
+
+/* Education */
+
+.cv-item-education-heading {
+	font-family: sans-serif;
+	font-size: 19px;
+}
+
+.cv-item-education-subheading {
+	font-weight: bold;
+	font-size: 14px;
+}
+
+.cv-item-education hr {
+	margin-top: 14px;
+    margin-bottom: 14px;
 }
 
 /* Languages */
@@ -143,6 +174,12 @@ hr.cv-item-subitem-separator {
 
 .cv-item-language-title, .cv-item-language-level-label {
 	grid-column-start: 1;
+}
+
+.cv-item-language-title {
+	font-size: 12.65px;
+	font-family: sans-serif;
+	font-weight: bold;
 }
 
 .cv-item-language-level-label {
@@ -165,7 +202,7 @@ hr.cv-item-subitem-separator {
 
 /* Accent color */
 
-.personal-info-title, .cv-item-work-experience-workplace, .cv-item-life-philosophy-quote, .cv-item-education-subheading {
+.personal-info-title, .cv-item-work-experience-position, .cv-item-life-philosophy-quote, .cv-item-education-subheading {
 	/* color: #008cff; */
 	color: #d21404;
 }
