--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 	margin-top: 33px;
 	width: 793px;
 	height: 1122px;
-	padding: 16mm 21mm 16mm 21mm;
+	padding: 72px 64px;
 	background-color: #fff;
     margin-left: auto;
     margin-right: auto;
@@ -81,8 +81,8 @@ body {
 .cv-body {
 	display: grid;
 	grid-gap: 0px 45px;
-	grid-template-columns: 65% 35%;
-	/* padding-top: 42px; */
+	/* не мога да му хвана спатиите на това заради gap-а горе */
+	grid-template-columns: 60.4% 33.9%;
 }
 
 .cv-body-main {
@@ -172,6 +172,7 @@ hr.cv-item-subitem-separator {
 
 .cv-item-language {
 	display: grid;
+	grid-template-columns: max-content auto;
 }
 
 .cv-item-language-title, .cv-item-language-level-label {
