--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
 /* Body */
 
 body {
-	/* font: ;  */
 	font-family: sans-serif;
-	/* display: block;
-	margin-left: auto;
-	margin-right: auto; */
 	background-color: #2a2a2e;
 	font-size: 12px;
 }
@@ -18,8 +14,8 @@ body {
 	height: 1122px;
     padding: 76px 76px;
 	background-color: #fff;
-    /* margin-left: auto;
-    margin-right: auto; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Header */
@@ -35,10 +31,6 @@ body {
 }
 
 .personal-info-name {
-	/* line-height: 35px;
-    font-size: 42px;
-	font-weight: bold;
-	padding-bottom: 9px; */
     padding-top: 6px;
     text-transform: uppercase;
     line-height: 37px;
@@ -57,7 +49,6 @@ body {
 	display: grid;
 	grid-template-columns: 50% 50%;
 	grid-template-rows: 50% 50%;
-	font-size: 12px;
 	font-weight: bold;
     grid-gap: 6px;
 }
@@ -92,22 +83,12 @@ a:hover {
 	margin-left: -25%;
 }
 
-/* [class^="icon"] */
 .fas, .far {
-	/* width: 15px;
-	height: 15px;
-	position: relative;
-	top: 15px; */
 	margin-right: 4px;
 }
 
 .cv-header .fas {
     margin-right: 7px;
-}
-
-/* I don't even know why this correction is needed */
-.even-personal-info-contact-child .fas {
-	margin-right: 7px;
 }
 
 .avatar {
@@ -151,7 +132,7 @@ hr.cv-item-subitem-separator {
 	border-right: 1px dashed #fff;
 }
 
-/*.cv-item-work-experience,*/ .cv-item-life-philosophy, .cv-item-skills, /*.cv-item-education,*/ /*.cv-item-language,*/ .cv-item-volunteering {
+.cv-item-life-philosophy, .cv-item-skills, /*.cv-item-education,*/ /*.cv-item-language,*/ .cv-item-volunteering {
 	padding-bottom: 10px;
 }
 
@@ -166,9 +147,12 @@ hr.cv-item-subitem-separator {
     font-size: 20px;
 }
 
-.cv-item-work-experience-position {
+.cv-item-work-experience-position, .cv-item-education-subheading {
 	font-weight: bold;
 	font-size: 14px;
+}
+
+.cv-item-work-experience-position {
     padding-bottom: 4px;
 }
 
@@ -197,11 +181,6 @@ ul {
 
 .cv-item-education-heading {
 	font-size: 19px;
-}
-
-.cv-item-education-subheading {
-	font-weight: bold;
-	font-size: 14px;
 }
 
 .cv-item-education hr {
@@ -258,12 +237,14 @@ ul {
 /* CV Footer */
 
 .cv-footer {
-	/* 76px would be better for consistency but this is what I chose */
+	/* 76px would be better for consistency but my choice */
     height: 63px;
     width: 793px;
     padding: 0px 76px 0px 63px;
     margin-top: -63px;
 	text-align: end;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Secondary color */
@@ -289,6 +270,6 @@ ul {
 
 /* Capitalizations */
 
-/* .personal-info-name, */.cv-item-heading { 
+.cv-item-heading { 
 	text-transform: uppercase;
 }
